examples/errors/undefined_label.pigsh
# 错误：跳转到不存在的标签
jump nowhere
